2006-06-04 13:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDrawer.h: Added ivar _contentSize to header.
	* Source/NSDrawer.m: Implemented keyed and non-keyed encoding.

2006-06-04 12:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSTrackingRect.m: Encode, if not a keyed archiver.
	* Source/NSApplication.m: Added coding
	* Source/NSDataLink.m: Added coding
	* Source/NSDataLinkManager.m: Added coding
	* Source/NSNib.m: Made comment use "TODO_NIB" instead of TODO, so that
	it can be pulled later.
	* Source/NSParagraphStyle.m: Added TODO_NIB.
	* Source/NSSelection.m: Added coding.
	* Source/NSSound.m: Added TODO_NIB
	* Source/NSTextAttachment.m: Added TODO_NIB.

2006-06-04 01:09 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSHbox.m: Implemented keyed coding.
	* Source/GSNibCompatibility.m: Added private method to help 
	better decode keys/values in the nib data structures.
	* Source/GSTable.m: Implemented keyed coding.
	* Source/GSTextStorage.m: Added code to skip existing
	coding method contents, if the coder is a keyed coder.
	* Source/GSVbox.m: Implemented keyed coding.
	* Source/NSMenuView.m: Added code to skip coding, if
	it is a keyed coder.
	* Source/NSPanel.m: Added comment indicating that the
	call to the superclass initWithCoder method should throw
	an exception per documentation.
	* Source/NSPrinter.m: Added if to skip the coder logic,
	if using a keyed coder.
	* Source/NSStepper.m: Removed dummy initWithCoder:/encodeWithCoder:
	methods since they only called the superclass.
	* Source/NSWindow.m: Added exception called for in the 
	documentation if NSWindow initWithCoder:/encodeWithCoder: 
	is called with a keyed archiver. 

2006-06-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrinter.m (-interpretQuotedValue:, -gethex:): Better
	error reporting on non-hexadecimal substring. Ignore "<<" sequence
	as this is valid as part of a PS command string.  
